--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -51,7 +51,7 @@
                         android:layout_centerInParent="true"
                         android:gravity="center"
                         android:text="0"
-                        android:textColor="@android:color/white"
+                        android:textColor="@color/theme_amap_speed"
                         app:layout_textSizePercent="80%h" />
 
                 </com.wow.carlauncher.common.theme.TRelativeLayout>
@@ -236,7 +236,7 @@
                 android:gravity="right|bottom"
                 android:singleLine="true"
                 android:text="现在"
-                android:textColor="#fff"
+                android:textColor="@color/theme_amap_next_dis"
                 app:layout_heightPercent="50%h"
                 app:layout_marginRightPercent="10%h"
                 app:layout_textSizePercent="30%h" />
@@ -252,7 +252,7 @@
                 android:gravity="right|top"
                 android:maxLines="2"
                 android:text="relax放松一下"
-                android:textColor="#ddd"
+                android:textColor="@color/theme_amap_next_road"
                 app:layout_heightPercent="50%h"
                 app:layout_marginRightPercent="10%h"
                 app:layout_textSizePercent="18%h" />
