--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -50,6 +50,9 @@
 
     <color name="theme_amap_xiansu">#333e54</color>
     <color name="theme_amap_shengyulicheng">#333e54</color>
+    <color name="theme_amap_next_dis">#fff</color>
+    <color name="theme_amap_next_road">#ddd</color>
+    <color name="theme_amap_speed">#fff</color>
 
     <color name="theme_weather_1_tianqi">#9ba1a9</color>
     <color name="theme_weather_1_wendu">#697185</color>
