--- a/mobile/src/main/res/layout/popup_navi.xml
+++ b/mobile/src/main/res/layout/popup_navi.xml
@@ -13,9 +13,8 @@
         android:layout_height="0dp"
         android:background="@drawable/popup_amap_bg"
         android:padding="5dp"
-        android:visibility="gone"
-        app:layout_heightPercent="60%h"
-        app:layout_widthPercent="60%h">
+        app:layout_heightPercent="80%h"
+        app:layout_widthPercent="80%h">
 
         <ImageView
             android:id="@+id/iv_info"
@@ -30,6 +29,7 @@
         android:id="@+id/fl_plugin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_heightPercent="60%w"
-        app:layout_widthPercent="60%w" />
+        android:visibility="gone"
+        app:layout_heightPercent="80%h"
+        app:layout_widthPercent="80%h" />
 </com.wow.carlauncher.common.theme.TLinearLayout>
