--- a/mobile/src/main/res/layout/content_driving_time.xml
+++ b/mobile/src/main/res/layout/content_driving_time.xml
@@ -14,18 +14,11 @@
 
     <TextView
         android:id="@+id/tv_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:text="10:10"
         android:textColor="#bbb"
         app:layout_textSizePercent="15%h" />
-
-    <TextView
-        android:id="@+id/tv_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="10月1日"
-        android:textColor="#bbb"
-        app:layout_textSizePercent="10%h" />
 
 </com.wow.carlauncher.common.theme.TLinearLayout>
