--- a/mobile/src/main/res/layout/activity_set.xml
+++ b/mobile/src/main/res/layout/activity_set.xml
@@ -116,6 +116,12 @@
                         app:titleEx="驾驶界面"
                         app:type="buttonB" />
 
+                    <com.wow.carlauncher.common.view.SetView
+                        android:id="@+id/sg_dudu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:titleEx="嘟嘟全家桶"
+                        app:type="buttonB" />
 
                     <TextView
                         android:layout_width="match_parent"
