兼容最新的嘟嘟FM和嘟嘟音乐

--- a/mobile/src/main/res/layout/content_l_dudu_fm.xml
+++ b/mobile/src/main/res/layout/content_l_dudu_fm.xml
@@ -20,7 +20,7 @@
             android:gravity="center"
             android:includeFontPadding="false"
             android:lines="1"
-            android:text="喜马拉雅FM"
+            android:text="嘟嘟FM"
             android:textColor="@color/theme_item_title"
             app:layout_marginLeftPercent="25%h"
             app:layout_marginRightPercent="25%h"
