--- a/mobile/src/main/res/layout/activity_about.xml
+++ b/mobile/src/main/res/layout/activity_about.xml
@@ -2,13 +2,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="#fff">
 
     <LinearLayout
         android:id="@+id/ll_set"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="#fff"
         android:orientation="vertical"
         android:padding="10dp">
 
