--- a/mobile/src/main/res/layout/activity_car_info.xml
+++ b/mobile/src/main/res/layout/activity_car_info.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="#fff">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="#fff"
         android:orientation="vertical"
         android:padding="10dp">
         <TextView
