--- a/mobile/src/main/res/layout/activity_set.xml
+++ b/mobile/src/main/res/layout/activity_set.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="#fff"
     android:orientation="horizontal"
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
@@ -57,7 +57,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/white"
+                    android:background="#fff"
                     android:orientation="vertical">
 
                     <com.wow.carlauncher.common.view.SetView
@@ -196,7 +196,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="7"
-        android:background="@android:color/white">
+        android:background="#fff">
 
         <LinearLayout
             android:layout_width="match_parent"
