--- a/mobile/src/main/res/layout/content_driving_cool_rev_and_water_temp.xml
+++ b/mobile/src/main/res/layout/content_driving_cool_rev_and_water_temp.xml
@@ -37,7 +37,7 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:text="0"
-            android:textColor="@android:color/white"
+            android:textColor="#fff"
             app:layout_heightPercent="20%h"
             app:layout_textSizePercent="20%h" />
 
