--- a/mobile/src/main/res/layout/content_driving_time.xml
+++ b/mobile/src/main/res/layout/content_driving_time.xml
@@ -5,7 +5,7 @@
     android:id="@+id/btn_back"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="#000"
     android:fitsSystemWindows="true"
     android:gravity="center"
     android:orientation="vertical"
