--- a/mobile/src/main/res/layout/content_set_home.xml
+++ b/mobile/src/main/res/layout/content_set_home.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="#fff"
         android:orientation="vertical">
 
         <TextView
