--- a/mobile/src/main/res/layout/refresh_footer.xml
+++ b/mobile/src/main/res/layout/refresh_footer.xml
@@ -4,7 +4,7 @@
     android:id="@+id/pull_to_refresh_header"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
+    android:background="#fff"
     android:gravity="center"
     android:paddingTop="10dip"
     android:paddingBottom="10dip"
