--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -39,6 +39,7 @@
     <color name="color_dark">#263238</color>
     <color name="color_dark_light">#455A64</color>
     <color name="color_light">#ECEFF1</color>
+    <color name="color_transparent">#00000000</color>
 
     <color name="theme_item_title">#333e54</color>
 
