--- a/mobile/src/main/res/drawable-v21/ripple_bg.xml
+++ b/mobile/src/main/res/drawable-v21/ripple_bg.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#aaa"> <!--波纹颜色-->
+    android:color="@color/set_gray"> <!--波纹颜色-->
     <item>
         <shape android:shape="rectangle">
             <!-- 填充背景色-->
-            <solid android:color="#fff" />
+            <solid android:color="@color/set_normal" />
         </shape>
     </item>
 </ripple>
