--- a/mobile/src/main/res/layout/activity_set.xml
+++ b/mobile/src/main/res/layout/activity_set.xml
@@ -18,36 +18,46 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <com.zhy.android.percent.support.PercentRelativeLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                android:background="@drawable/set_view_top_bg"
-                android:orientation="horizontal">
+                android:layout_weight="1">
 
-                <TextView
+                <com.zhy.android.percent.support.PercentRelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="设置"
-                    android:textColor="@color/colorPrimary"
-                    app:layout_textSizePercent="40%h" />
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/btn_back"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_alignParentLeft="true"
-                    android:clickable="true"
-                    android:contentDescription="@string/app_name"
-                    android:focusable="true"
-                    android:padding="10dp"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/ic_back2"
-                    app:layout_heightPercent="100%h"
-                    app:layout_widthPercent="100%h" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="设置"
+                        android:textColor="@color/colorPrimary"
+                        app:layout_textSizePercent="40%h" />
 
-            </com.zhy.android.percent.support.PercentRelativeLayout>
+                    <ImageView
+                        android:id="@+id/btn_back"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_alignParentLeft="true"
+                        android:clickable="true"
+                        android:contentDescription="@string/app_name"
+                        android:focusable="true"
+                        android:padding="10dp"
+                        android:scaleType="fitXY"
+                        android:src="@mipmap/ic_back2"
+                        app:layout_heightPercent="100%h"
+                        app:layout_widthPercent="100%h" />
+
+                </com.zhy.android.percent.support.PercentRelativeLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.1dp"
+                    android:layout_gravity="bottom"
+                    android:background="@color/main_interval_color" />
+            </FrameLayout>
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -203,63 +213,73 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <com.zhy.android.percent.support.PercentLinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                android:background="@drawable/set_view_top_bg"
-                android:orientation="horizontal">
+                android:layout_weight="1">
 
                 <com.zhy.android.percent.support.PercentLinearLayout
-                    android:id="@+id/set_content_back"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="left|center_vertical"
-                    android:padding="10dp">
+                    android:orientation="horizontal">
 
                     <com.zhy.android.percent.support.PercentLinearLayout
+                        android:id="@+id/set_content_back"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:gravity="left|center_vertical"
+                        android:padding="10dp">
 
-                        <ImageView
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:scaleType="fitXY"
-                            android:src="@mipmap/ic_back2"
-                            app:layout_heightPercent="100%h"
-                            app:layout_widthPercent="100%h" />
+                        <com.zhy.android.percent.support.PercentLinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent">
+
+                            <ImageView
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:scaleType="fitXY"
+                                android:src="@mipmap/ic_back2"
+                                app:layout_heightPercent="100%h"
+                                app:layout_widthPercent="100%h" />
+                        </com.zhy.android.percent.support.PercentLinearLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical|left"
+                            android:text="返回"
+                            android:textColor="@color/colorPrimary"
+                            app:layout_textSizePercent="35%h" />
                     </com.zhy.android.percent.support.PercentLinearLayout>
 
                     <TextView
+                        android:id="@+id/set_content_title"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="标题"
+                        android:textColor="@color/colorPrimary"
+                        app:layout_textSizePercent="40%h" />
+
+                    <TextView
+                        android:id="@+id/set_content_save"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical|left"
-                        android:text="返回"
+                        android:gravity="center_vertical|right"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="15dp"
+                        android:text="保存"
                         android:textColor="@color/colorPrimary"
                         app:layout_textSizePercent="35%h" />
                 </com.zhy.android.percent.support.PercentLinearLayout>
 
-                <TextView
-                    android:id="@+id/set_content_title"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="标题"
-                    android:textColor="@color/colorPrimary"
-                    app:layout_textSizePercent="40%h" />
-
-                <TextView
-                    android:id="@+id/set_content_save"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical|right"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="15dp"
-                    android:text="保存"
-                    android:textColor="@color/colorPrimary"
-                    app:layout_textSizePercent="35%h" />
-            </com.zhy.android.percent.support.PercentLinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.1dp"
+                    android:layout_gravity="bottom"
+                    android:background="@color/main_interval_color" />
+            </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/set_content"
