--- a/mobile/src/main/res/layout/set_view_default.xml
+++ b/mobile/src/main/res/layout/set_view_default.xml
@@ -9,7 +9,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/set_select_bg"
         android:gravity="center_vertical"
         android:minHeight="?android:listPreferredItemHeight"
         android:orientation="horizontal"
@@ -50,4 +49,10 @@
             android:orientation="vertical" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:layout_gravity="bottom"
+        android:background="@color/main_interval_color" />
 </FrameLayout>
