--- a/mobile/src/main/res/layout/set_view_default.xml
+++ b/mobile/src/main/res/layout/set_view_default.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/ripple_bg"
+    android:background="@drawable/st_bg"
     tools:ignore="HardcodedText,RtlHardcoded">
 
     <LinearLayout
@@ -49,10 +49,4 @@
             android:orientation="vertical" />
 
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:layout_gravity="bottom"
-        android:background="@color/main_interval_color" />
 </FrameLayout>
