--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -57,6 +57,39 @@
                 </com.wow.carlauncher.common.theme.TRelativeLayout>
             </FrameLayout>
 
+            <com.wow.carlauncher.common.theme.TLinearLayout
+                android:id="@+id/ll_xunxiansu"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_below="@id/fl_xunhang_root"
+                android:background="@drawable/theme_amap_quan"
+                android:orientation="vertical"
+                android:visibility="gone"
+                app:layout_heightPercent="14%h"
+                app:layout_marginLeftPercent="3%h"
+                app:layout_marginTopPercent="3%h"
+                app:layout_widthPercent="14%h">
+
+                <TextView
+                    android:id="@+id/tv_xunxiansu"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:gravity="center_horizontal|bottom"
+                    android:text="120"
+                    android:textColor="@color/theme_amap_xiansu"
+                    app:layout_textSizePercent="35%h" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:gravity="center_horizontal|top"
+                    android:text="KM/H"
+                    android:textColor="@color/theme_amap_xiansu"
+                    app:layout_textSizePercent="15%h" />
+            </com.wow.carlauncher.common.theme.TLinearLayout>
+
             <View
                 android:id="@+id/line_xunhang"
                 android:layout_width="match_parent"
