--- a/mobile/src/main/res/layout/set_view_default.xml
+++ b/mobile/src/main/res/layout/set_view_default.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/st_bg"
+    android:background="@drawable/ripple_bg"
     tools:ignore="HardcodedText,RtlHardcoded">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/st_bg"
         android:gravity="center_vertical"
         android:minHeight="?android:listPreferredItemHeight"
         android:orientation="horizontal"
